--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/vim-monokai"]
 	path = vim/bundle/vim-monokai
 	url = git@github.com:sickill/vim-monokai.git
+[submodule "vim/bundle/zencoding"]
+	path = vim/bundle/zencoding
+	url = git@github.com:mattn/zencoding-vim.git
