--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/zencoding"]
 	path = vim/bundle/zencoding
 	url = git@github.com:mattn/zencoding-vim.git
+[submodule "vim/bundle/coffee"]
+	path = vim/bundle/coffee
+	url = git@github.com:kchmck/vim-coffee-script.git
