--- a/.gitmodules
+++ b/.gitmodules
@@ -25,12 +25,12 @@
 [submodule "vim/bundle/vim-monokai"]
 	path = vim/bundle/vim-monokai
 	url = git@github.com:sickill/vim-monokai.git
-[submodule "vim/bundle/zencoding"]
-	path = vim/bundle/zencoding
-	url = git@github.com:mattn/zencoding-vim.git
 [submodule "vim/bundle/coffee"]
 	path = vim/bundle/coffee
 	url = git@github.com:kchmck/vim-coffee-script.git
 [submodule "vim/bundle/vim-literate-coffeescript"]
 	path = vim/bundle/vim-literate-coffeescript
 	url = https://github.com/mintplant/vim-literate-coffeescript.git
+[submodule "vim/bundle/emmet-vim"]
+	path = vim/bundle/emmet-vim
+	url = http://github.com/mattn/emmet-vim.git
