--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/bundle/puppet-syntax-vim"]
 	path = vim/bundle/puppet-syntax-vim
 	url = https://github.com/puppetlabs/puppet-syntax-vim.git
+[submodule "vim/bundle/vim-sauce"]
+	path = vim/bundle/vim-sauce
+	url = https://github.com/joonty/vim-sauce.git
